Elastic alert closure, Nessus report, IRIS IOCs

--- a/elastic/close_open_alerts.ipynb
+++ b/elastic/close_open_alerts.ipynb
@@ -29,13 +29,14 @@
     "    if elastic_secret:\n",
     "        fqdn = input(\"Enter the Elastic Security FQDN-> \")\n",
     "        session = ElasticMethods(fqdn, elastic_secret)\n",
-    "        session._get_agents()"
+    "        ids = session._get_open_alerts()\n",
+    "        session._close_open_alerts(ids)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c38ac3a2-c2af-4b7c-8021-37821e50d159",
+   "id": "3fb72840-deac-4114-985e-c52e8267cf21",
    "metadata": {},
    "outputs": [],
    "source": []
