--- a/elastic/get_agent_actions.ipynb
+++ b/elastic/get_agent_actions.ipynb
@@ -29,7 +29,7 @@
     "    if elastic_secret:\n",
     "        fqdn = input(\"Enter the Elastic Security FQDN-> \")\n",
     "        session = ElasticMethods(fqdn, elastic_secret)\n",
-    "        session._get_agents()"
+    "        session._get_agent_actions()"
    ]
   },
   {
