--- a/iris/export_case_to_json.ipynb
+++ b/iris/export_case_to_json.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a9a3639-56ff-412a-9c25-d8b35ad4a9f7",
+   "id": "acdbca1d-dfd3-48c3-9891-ce4afa671bcc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from elastic_methods import ElasticMethods\n",
+    "from datetime import datetime, timedelta, timezone\n",
+    "from iris_methods import IrisMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,17 +26,22 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    elastic_secret = vault_session.retrieve_elastic_secret()\n",
-    "    if elastic_secret:\n",
-    "        fqdn = input(\"Enter the Elastic Security FQDN-> \")\n",
-    "        session = ElasticMethods(fqdn, elastic_secret)\n",
-    "        session._get_agents()"
+    "    iris_token = vault_session.retrieve_iris_secret()\n",
+    "    logging.info(\"Retrieving token\")\n",
+    "    if iris_token:\n",
+    "        fqdn = input(\"Enter the IRIS FQDN -> \")\n",
+    "        session = IrisMethods(fqdn, iris_token)\n",
+    "        session.retrieve_open_cases()\n",
+    "        case_id = input(\"Enter the case ID-> \")\n",
+    "        session.export_case_to_json(case_id)\n",
+    "    else:\n",
+    "        logging.error(\"Failed to retrieve the DFIR IRIS token\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c38ac3a2-c2af-4b7c-8021-37821e50d159",
+   "id": "65b2e53e-0fec-472c-b069-dbe0d1869708",
    "metadata": {},
    "outputs": [],
    "source": []
