--- a/nessus/get_scan_results.ipynb
+++ b/nessus/get_scan_results.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a9a3639-56ff-412a-9c25-d8b35ad4a9f7",
+   "id": "60825241-c10b-43f2-85b8-dae3bc2bd74c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from elastic_methods import ElasticMethods\n",
+    "from nessus_methods import NessusMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -25,17 +25,24 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    elastic_secret = vault_session.retrieve_elastic_secret()\n",
-    "    if elastic_secret:\n",
-    "        fqdn = input(\"Enter the Elastic Security FQDN-> \")\n",
-    "        session = ElasticMethods(fqdn, elastic_secret)\n",
-    "        session._get_agents()"
+    "    nessus_secrets = vault_session.retrieve_nessus_secrets()\n",
+    "    logging.info(\"Retrieving token\")\n",
+    "    if nessus_secrets:\n",
+    "        fqdn = input(\"Enter the Nessus IP or FQDN-> \")\n",
+    "        session = NessusMethods(fqdn, nessus_secrets[0], nessus_secrets[1])\n",
+    "        scans = session.get_scans()\n",
+    "        logging.info(scans)\n",
+    "        if scans:\n",
+    "            logging.info(\"Retrieving scans\")\n",
+    "            session.get_scan_results(scans)\n",
+    "        else:\n",
+    "            logging.error(\"Failed to retrieve scan data\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c38ac3a2-c2af-4b7c-8021-37821e50d159",
+   "id": "efdcea72-a467-4d41-a0fb-d4d33c56ebc6",
    "metadata": {},
    "outputs": [],
    "source": []
