Proxmox snapshots etc.

--- a/firewall/block_egress_fqdn.ipynb
+++ b/firewall/block_egress_fqdn.ipynb
@@ -3,17 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87feeb71-6a44-4c77-88df-7525d1b86a9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Using the firewall's switch controller, retrieve data on connected devices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abc71d9e-ebcc-4168-9730-5e843c8114e6",
+   "id": "b35a879c-aaa1-4336-a4d4-5c4958839b7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +34,33 @@
     "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
     "        valid_token = firewall_session.check_token_validity()\n",
     "        if valid_token:\n",
-    "            firewall_session.retrieve_switchport_devices()\n",
-    "    else:\n",
-    "        logging.error(\"Failed to retrieve firewall token\")"
+    "            sdwan_zones = firewall_session.list_sdwan_zones()\n",
+    "            zones = firewall_session.list_zones()\n",
+    "            interfaces = firewall_session.list_interfaces()\n",
+    "            srcintf = \"\"\n",
+    "            dstinft = \"\"\n",
+    "            addr = \"\"\n",
+    "            for zone in range(0,len(zones)):\n",
+    "                logging.info(\"{0} -> {1}\".format(zone, zones[zone]))\n",
+    "            srcintf = int(input(\"Enter the source zone index-> \"))\n",
+    "            srcintf = zones[srcintf]\n",
+    "            logging.info(\"Source zone: {0}\".format(srcintf))\n",
+    "            for zone in range(0,len(sdwan_zones)):\n",
+    "                logging.info(\"{0} -> {1}\".format(zone, sdwan_zones[zone]))\n",
+    "            dstintf = int(input(\"Enter the destination zone index-> \"))\n",
+    "            dstintf = sdwan_zones[dstintf]\n",
+    "            logging.info(\"Destination zone: {0}\".format(dstintf))\n",
+    "            fqdn = str(input(\"Enter the FQDN to block-> \"))\n",
+    "            obj_name = firewall_session.create_fqdn_object(fqdn)\n",
+    "            if obj_name:\n",
+    "                firewall_session.create_policy(srcintf, dstintf, obj_name)\n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9a78e5-6028-44a9-9c6d-fd5febed4395",
+   "id": "ebd85184-e0dd-4ab6-9bb6-f5579dcddf1f",
    "metadata": {},
    "outputs": [],
    "source": []
