--- a/firewall/clear_session_table.ipynb
+++ b/firewall/clear_session_table.ipynb
@@ -3,17 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87feeb71-6a44-4c77-88df-7525d1b86a9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Using the firewall's switch controller, retrieve data on connected devices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abc71d9e-ebcc-4168-9730-5e843c8114e6",
+   "id": "7e8a0cc6-5c89-4f2d-8242-1b36cfd0c5e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +34,7 @@
     "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
     "        valid_token = firewall_session.check_token_validity()\n",
     "        if valid_token:\n",
-    "            firewall_session.retrieve_switchport_devices()\n",
+    "            firewall_session.clear_session_table()\n",
     "    else:\n",
     "        logging.error(\"Failed to retrieve firewall token\")"
    ]
@@ -52,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9a78e5-6028-44a9-9c6d-fd5febed4395",
+   "id": "fd7afc85-e059-4594-b3c8-67803827d509",
    "metadata": {},
    "outputs": [],
    "source": []
