--- a/proxmox/get_nodes.ipynb
+++ b/proxmox/get_nodes.ipynb
@@ -3,21 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87feeb71-6a44-4c77-88df-7525d1b86a9d",
+   "id": "f3cdc0b4-288d-4340-be4f-7614e40447c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Using the firewall's switch controller, retrieve data on connected devices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abc71d9e-ebcc-4168-9730-5e843c8114e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fortigate_methods import FortigateMethods\n",
+    "from proxmox_methods import ProxmoxMethods\n",
     "import requests\n",
     "import logging\n",
     "import urllib3\n",
@@ -35,24 +25,24 @@
     "if __name__ == '__main__':\n",
     "    vault_session = VaultMethods()\n",
     "    vault_session.authenticate()\n",
-    "    firewall_token = vault_session.retrieve_firewall_secret()\n",
-    "    logging.info(\"Retrieving token\")\n",
-    "    if firewall_token:\n",
-    "        logging.info(\"Retrieved firewall token\")\n",
-    "        addr = input(\"Firewall IP/FQDN-> \")\n",
-    "        port = int(input(\"Firewall interface port-> \"))\n",
-    "        firewall_session = FortigateMethods(addr, port, firewall_token)\n",
-    "        valid_token = firewall_session.check_token_validity()\n",
-    "        if valid_token:\n",
-    "            firewall_session.retrieve_switchport_devices()\n",
-    "    else:\n",
-    "        logging.error(\"Failed to retrieve firewall token\")"
+    "    logging.info(\"Retrieving Proxmox authentication data\")\n",
+    "    auth_data = vault_session.retrieve_proxmox_secrets()\n",
+    "    if auth_data:\n",
+    "        logging.info(\"Retrieved authentication data\")\n",
+    "        fqdn = input(\"Enter the ProxmoxVE FQDN/IP-> \")\n",
+    "        session = ProxmoxMethods(fqdn,\n",
+    "                                 auth_data['identity'],\n",
+    "                                 auth_data['realm'],\n",
+    "                                 auth_data['role'],\n",
+    "                                 auth_data['token'])\n",
+    "        session._get_nodes()\n",
+    "        session._get_hosts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9a78e5-6028-44a9-9c6d-fd5febed4395",
+   "id": "03f2e3be-1b53-4a26-bea1-eb732707749b",
    "metadata": {},
    "outputs": [],
    "source": []
