Basic MISP event query addition

--- a/misp/event_search.ipynb
+++ b/misp/event_search.ipynb
@@ -14,6 +14,7 @@
     "import os\n",
     "sys.path.append(os.path.abspath('../vault'))\n",
     "from vault_methods import VaultMethods\n",
+    "from misp_methods import MISPMethods\n",
     "\n",
     "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n",
     "\n",
@@ -28,6 +29,10 @@
     "    logging.info(\"Retrieving token\")\n",
     "    if misp_token:\n",
     "        logging.info(\"Retrieved MISP token\")\n",
+    "        misp_fqdn = input(\"Enter the MISP IP/FQDN-> \")\n",
+    "        misp_session = MISPMethods(misp_token, misp_fqdn)\n",
+    "        query_value = input(\"Enter the search value (IP/FQDN) ->\")\n",
+    "        misp_session.search_events(query_value)\n",
     "    else:\n",
     "        logging.error(\"Failed to retrieve MISP token\")"
    ]
